# csdata

./: .gitignore  README.md  prepare_tabdit.py  pyproject.toml
.github/workflows/: ci.yml
csdata/: __init__.py  audit.py  cli.py  download.py  flags.py  health_heritage.py  infer.py  prepare.py  registry.py  render.py  spec.py  transforms.py  validate.py
csdata/specs/: adult.yaml  bank_marketing.yaml  beijing.yaml  compas.yaml  default.yaml  german.yaml  health_heritage.yaml  heart.yaml  law_school.yaml  shoppers.yaml  telco_churn.yaml  wine_quality_red.yaml
tests/: test_audit.py  test_cli.py  test_download.py  test_flags.py  test_health_heritage.py  test_infer.py  test_prepare.py  test_registry.py  test_render_idx.py  test_render_name.py  test_spec.py  test_specs_reconciled.py  test_transforms.py  test_validate.py
