[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csdata"
version = "0.1.0"
description = "Single-source dataset onboarding for constrained synthetic tabular data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gaurav Meena", email = "gauravmeena0708@gmail.com"}]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
audit = ["ucimlrepo>=0.0.7"]

[project.scripts]
csdata = "csdata.cli:main"

[tool.setuptools]
packages = ["csdata"]

[tool.setuptools.package-data]
csdata = ["specs/*.yaml"]
